[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/Setups/NetworkSetupCustom4.gd" type="Script" id=1]
[ext_resource path="res://scenes/MainMenu/HeaderSection.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/SetupSections/FiringModesSection.gd" type="Script" id=4]
[ext_resource path="res://scenes/Setups/GoToLobby.gd" type="Script" id=5]
[ext_resource path="res://scenes/Setups/BackToMenu.gd" type="Script" id=6]
[ext_resource path="res://scenes/SetupSections/MagazineSection.gd" type="Script" id=7]
[ext_resource path="res://scenes/Widgets/PlusMinusWidget.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]

size = 38
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 26
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 26
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 26
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=7]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=8]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=9]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=10]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=11]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="NetworkSetupCustom4" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Script" ]

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 540.0
margin_bottom = 960.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="HeaderSection" parent="." instance=ExtResource( 2 )]

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 102.0
margin_right = 530.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.576471, 0.513726, 0.231373, 1 )

[node name="Label" type="Label" parent="ColorRect3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 520.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Let's Setup Your Game"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Label2" type="Label" parent="ColorRect3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 49.0
margin_right = 520.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "For a Game without Network"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Label3" type="Label" parent="ColorRect3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 83.0
margin_right = 520.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Support, All Players MUST have the"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Label4" type="Label" parent="ColorRect3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 117.0
margin_right = 517.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "same settings. Or errors are likely!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="FiringModesSection" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 265.0
margin_right = 530.0
margin_bottom = 365.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.576471, 0.513726, 0.231373, 1 )
script = ExtResource( 4 )
_sections_unfolded = [ "Script" ]

[node name="Label" type="Label" parent="FiringModesSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -1.0
margin_right = 520.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Which Firing Modes Are Allowed?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Label2" type="Label" parent="FiringModesSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 390.0
margin_top = 24.0
margin_right = 516.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Full-Auto"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="FullAuto" type="CheckBox" parent="FiringModesSection/Label2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 16.0
margin_right = 44.0
margin_bottom = 40.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
_sections_unfolded = [ "Rect" ]

[node name="Label3" type="Label" parent="FiringModesSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 24.0
margin_right = 148.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
text = "Semi-Auto"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="SemiAuto" type="CheckBox" parent="FiringModesSection/Label3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_top = 16.0
margin_right = 63.0
margin_bottom = 40.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Label4" type="Label" parent="FiringModesSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_top = 24.0
margin_right = 365.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
text = "3-Round Burst"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Burst3" type="CheckBox" parent="FiringModesSection/Label4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 16.0
margin_right = 74.0
margin_bottom = 40.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
_sections_unfolded = [ "Rect" ]

[node name="GoToLobby" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 322.0
margin_top = 896.0
margin_right = 537.0
margin_bottom = 956.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Go To Lobby >"
flat = false
align = 1
script = ExtResource( 5 )
_sections_unfolded = [ "Script", "custom_fonts", "custom_fonts/font" ]

[node name="BackToMenu" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 900.0
margin_right = 216.0
margin_bottom = 956.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "< Back To Menu"
flat = false
align = 1
script = ExtResource( 6 )
_sections_unfolded = [ "Script", "custom_fonts", "custom_fonts/font" ]

[node name="MagazineSection" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 380.0
margin_right = 530.0
margin_bottom = 460.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.576471, 0.513726, 0.231373, 1 )
script = ExtResource( 7 )
_sections_unfolded = [ "Script" ]

[node name="Label" type="Label" parent="MagazineSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = -1.0
margin_right = 517.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
text = "How many rounds in a full reload?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="MagazineSize" parent="MagazineSection" instance=ExtResource( 8 )]
margin_left = 180.0
margin_top = 31.0
margin_right = 310.0
margin_bottom = 71.0

[connection signal="pressed" from="FiringModesSection/Label2/FullAuto" to="FiringModesSection" method="_on_FullAuto_pressed" flags=3]
[connection signal="pressed" from="FiringModesSection/Label3/SemiAuto" to="FiringModesSection" method="_on_SemiAuto_pressed" flags=3]
[connection signal="pressed" from="FiringModesSection/Label4/Burst3" to="FiringModesSection" method="_on_Burst3_pressed" flags=3]
[connection signal="pressed" from="GoToLobby" to="." method="_on_GoToLobby_pressed" flags=3]
[connection signal="pressed" from="BackToMenu" to="BackToMenu" method="_on_BackToMenu_pressed" flags=7]
[connection signal="PMWidChanged" from="MagazineSection/MagazineSize" to="MagazineSection" method="_on_MagazineSize_PMWidChanged" flags=3]
